* make register_sync_callbacks really side-effect-free; this fixes
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/116 (Thanks to
  Heck.)  This contributes to unblock
  https://gitea.pep.foundation/pEp.foundation/pEpJNIAdapter/issues/24 .

v3.2.0-RC19  2023-01-18
* The logging facility can now enabled and disabled from a configuration
  function, the new API function
    DYNAMIC_API void config_enable_log(PEP_SESSION session, bool enable)
  .  By default logging is now disabled, unless the environment variable PEP_LOG
  is defined to any value.
  This solves https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/100
* sql_reliability: remove debugging prints, replace with more generally useful
  messages.

v3.2.0-RC18  2023-01-18
* Fix https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/90 : it is
  now possible to open multiple concurrent threads with a database logging
  destination.
  No user-visible changes, other than more reliability.
* Make SQL transactions robust by not assuming, incorrectly, that COMMIT
  TRANSACTION or ROLLBACK TRANSACTION never fail with SQLITE_BUSY or
  SQLITE_LOCKED inside an EXCLUSIVE tranaction.  This improves
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/104
  with a fix in the same spirit of
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/90 .
  Again no user-visible changes, other than more reliability.

v3.2.0-RC17  2023-01-18
* general overhaul of concurrent SQL execution, adding loops with exponential
  backoff and EXCLUSIVE transactions.  This should solve many concurrency
  problems (see src/sql_reliability.h ).
  This fixes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/104 .
  Even if this is an important change there is no API change related to this
  functionality.

v3.2.0-RC16  2023-01-17
* rewrite some CPP macros working around problems (I indeed suspect a bug:
  macro expansion contained parentheses not in macro definitions) with